src/objects/P360_Request__c.object
<CustomObject>
    <fields>
        <fullName>ScoreImplementationBenefits__c</fullName>
        <description>Formula field for calculating score for Implementation Benefits field. Each selection adds 1 point</description>
        <formula>/* Depending on the selection in the Implementation Benefits field, assign a score from the Request Settings record */

IF ( INCLUDES( ImplementationBenefits__c , &apos;Reduce service calls/emails or service tickets&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( ImplementationBenefits__c , &apos;Cost reduction&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( ImplementationBenefits__c , &apos;Eliminate manual or legacy business processes&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( ImplementationBenefits__c , &apos;Increase employee productivity and/or engagement&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( ImplementationBenefits__c , &apos;Increase revenue&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( ImplementationBenefits__c , &apos;Other&apos;), RequestSetting__r.Q5_Score__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Implementation Benefits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScoreNumberOfUsersImpacted__c</fullName>
        <description>Formula field for calculating score for Number of Users selected. Depending on the selection, assign a score.</description>
        <formula>/* Depending on the selection in the Number of Users Impacted, assign a score from the Request Settings record */

IF ( ISPICKVAL (NumberOfUsersImpacted__c, &apos;Unknown&apos;), 0, 0) +  
IF ( ISPICKVAL (NumberOfUsersImpacted__c, &apos;1-100&apos;), RequestSetting__r.Q4A_Score__c, 0) +
IF ( ISPICKVAL (NumberOfUsersImpacted__c, &apos;101-5000&apos;), RequestSetting__r.Q4B_Score__c, 0) +
IF ( ISPICKVAL (NumberOfUsersImpacted__c, &apos;5000+&apos;), RequestSetting__r.Q4C_Score__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Number of users impacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScoreTypeOfUsersImpacted__c</fullName>
        <description>Formula field for calculating score for Type of Users Impacted field. Each selection adds 1 point</description>
        <formula>/* For each selection, add the score as defined on the Request Settings record */

IF ( INCLUDES( TypeOfUsersImpacted__c, &apos;Internal GSA&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( TypeOfUsersImpacted__c, &apos;External Agency Customers&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( TypeOfUsersImpacted__c, &apos;Citizens&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( TypeOfUsersImpacted__c, &apos;Vendors&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( TypeOfUsersImpacted__c, &apos;Other&apos;), RequestSetting__r.Q5_Score__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Type Of Users Impacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusUpdateOrComments__c</fullName>
        <description>Pulse Status Update/Comments</description>
        <inlineHelpText>Status Update/Comments from the latest pulse</inlineHelpText>
        <label>Status Update/Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Current status of the request</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Request</fullName>
                    <default>true</default>
                    <label>New Request</label>
                </value>
                <value>
                    <fullName>Scoping</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Solution/LOE Complete</fullName>
                </value>
                <value>
                    <fullName>Awaiting BRG Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmittedBy__c</fullName>
        <description>Determines if the current user created or submitted this request. This field will be used in list view filters</description>
        <formula>IF ( CreatedById =  $User.Id , &apos;Me&apos;, CreatedBy.FirstName &amp; &apos; &apos; &amp; CreatedBy.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfUsersImpactedOther__c</fullName>
        <description>If Type of Users Impacted is OTHER, input value is recorded here</description>
        <inlineHelpText>If Type of Users Impacted is OTHER, input value is recorded here</inlineHelpText>
        <label>Type of users impacted (other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfUsersImpacted__c</fullName>
        <description>What type of users are impacted by the implementation of this request?</description>
        <inlineHelpText>What type of users are impacted by the implementation of this request?</inlineHelpText>
        <label>Type of users impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal GSA</fullName>
                </value>
                <value>
                    <fullName>External Agency Customers</fullName>
                </value>
                <value>
                    <fullName>Citizens</fullName>
                </value>
                <value>
                    <fullName>Vendors</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Application (an application does not currently exist)</fullName>
                </value>
                <value>
                    <fullName>Application Enhancement (improvement, change, or new functionality for an existing application)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpcomingActionItems__c</fullName>
        <description>Pulse Upcoming Action Items</description>
        <inlineHelpText>Upcoming Action Items from the latest pulse</inlineHelpText>
        <label>Upcoming Action Items</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>isConvertedtoEBC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to track if the request has been converted to EBC when the Costs is greater than 500k</description>
        <label>Converted to EBC</label>
        <type>Checkbox</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>RequestorName__c</columns>
        <columns>RequestorSSO__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Enhancement_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RequestorName__c</columns>
        <columns>RequestorSSO__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>P360_Request__c.P360_Enhancement</value>
        </filters>
        <label>All Enhancement Requests</label>
    </listViews>
    <listViews>
        <fullName>All_NewApplication_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RequestorName__c</columns>
        <columns>RequestorSSO__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>P360_Request__c.P360_NewApplication</value>
        </filters>
        <label>All New Application Requests</label>
    </listViews>
    <listViews>
        <fullName>My_Submitted_Requests</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>RequestorName__c</columns>
        <columns>RequestorSSO__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubmittedBy__c</field>
            <operation>equals</operation>
            <value>Me</value>
        </filters>
        <label>My Submitted Requests</label>
    </listViews>
    <listViews>
        <fullName>Requests_in_Triage</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>ProjectSponsor__c</columns>
        <columns>RequestorName__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Requests in Triage</label>
    </listViews>
    <nameField>
        <label>Project Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <recordTypes>
        <fullName>P360_Enhancement</fullName>
        <active>true</active>
        <description>Use this record type for creating &apos;Enhancement&apos; requests</description>
        <label>Enhancement</label>
    </recordTypes>
    <recordTypes>
        <fullName>P360_NewApplication</fullName>
        <active>true</active>
        <description>Use this record type for creating &apos;Brand New Application&apos; requests</description>
        <label>New Application</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>P360_Analysis_CostAndLevelOfEffortReq</fullName>
        <active>true</active>
        <description>P360 - Once in the Analysis status, the &apos;Costs&apos; and &quot;Level of Effort&apos; field become required. These must be populated before moving onto the next status</description>
        <errorConditionFormula>AND ( ISPICKVAL(PRIORVALUE(Status__c), &apos;Analysis&apos;), 
      OR ( ISBLANK(Costs__c), ISPICKVAL( LevelOfEffort__c ,&apos;&apos;)),
	  NOT(ISPICKVAL (Status__c, &apos;New Request&apos;)),
	  NOT(ISPICKVAL (Status__c, &apos;Scoping&apos;)),
	  ISCHANGED (Status__c)
	)</errorConditionFormula>
        <errorMessage>&apos;Costs&apos; and &apos;Level of Effort&apos; fields must be populated in order to proceed beyond &apos;Analysis&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P360_BRGApprovedRequiredIfStatusApproved</fullName>
        <active>true</active>
        <description>P360 - BRG Approved (Yes or No) is required if the Status equals &apos;Approved&apos; unless BRG Approval was not required (cost &lt; 150k)</description>
        <errorConditionFormula>AND ( ISPICKVAL (Status__c,&apos;Approved&apos;),
      (OR (ISPICKVAL (BRGApproved__c,&apos;&apos;), ISPICKVAL (BRGApproved__c,&apos;NA&apos;))),
	  Costs__c &gt; 150000
	)</errorConditionFormula>
        <errorDisplayField>BRGApproved__c</errorDisplayField>
        <errorMessage>BRG Approval is required if the Costs are greater than $150,000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P360_LOERequiredBRGApprovedOrConverted</fullName>
        <active>true</active>
        <description>P360 - A &quot;Level of Effort&quot; value is required in order to update the Status to &quot;Pending BRG Approval&quot; or &quot;Approved&quot;</description>
        <errorConditionFormula>AND (
    OR ( ISPICKVAL ( Status__c,&apos;Approved&apos; ), ISPICKVAL (Status__c,&apos;Awaiting BRG Approval&apos; )),
    ISPICKVAL(LevelOfEffort__c,&apos;&apos;)
	)</errorConditionFormula>
        <errorDisplayField>LevelOfEffort__c</errorDisplayField>
        <errorMessage>A Level of Effort must be selected in order to update Status to &apos;Awaiting BRG Approval&apos; or &apos;Approved&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P360_Request_BRGApprvlCostGreatrThan150k</fullName>
        <active>false</active>
        <description>P360 - Estimated Costs must be over $150k in order to update the status to &quot;Pending BRG Approval&quot; - Error message if less</description>
        <errorConditionFormula>AND(
ISPICKVAL(Status__c,&apos;Awaiting BRG Approval&apos;), Costs__c  &lt; 150000 || (ISNULL(Costs__c)))</errorConditionFormula>
        <errorDisplayField>Costs__c</errorDisplayField>
        <errorMessage>Requests that cost less than $150,000 do not require BRG Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P360_Request_ConvertedAlready</fullName>
        <active>true</active>
        <description>P360 - If status is changed when request is already converted, throw an error</description>
        <errorConditionFormula>AND ( 
     IsConverted__c , 
	 ISCHANGED( Status__c ), 
	 AND ( $Profile.Name &lt;&gt; &apos;GSA System Administrator&apos;, $Profile.Name &lt;&gt; &apos;GSA System User&apos;, $Profile.Name &lt;&gt; &apos;System Administrator&apos; )
	)</errorConditionFormula>
        <errorMessage>This request has already been converted into a project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P360_Request_CreateEBCPermissionRequired</fullName>
        <active>true</active>
        <description>P360 - Throw an error when the current user doesn&apos;t have the EBC-CreateEBC custom permission (assigned to users who have EBC - User - CRE Permission Set)</description>
        <errorConditionFormula>AND	( 
	NOT ( $Permission.EBC_CreateEBC ) ,
	ISCHANGED ( EBC_Title__c ) 
	)</errorConditionFormula>
        <errorMessage>You do not have the necessary permission to create an EBC. Please contact your System Administrator to request access.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P360_Request_EBCConversion</fullName>
        <active>true</active>
        <description>Restrict the users to update the status of the BRG Approved field to &apos;Yes&apos; when the costs is greater than 500k</description>
        <errorConditionFormula>AND ( OR ( AND ( Costs__c &lt; 500000 , 
    NOT(ISBLANK(Costs__c)) ), ISBLANK (Costs__c) ), 
    ISCHANGED(EBC_Title__c)
    )</errorConditionFormula>
        <errorMessage>This Request does not meet the criteria to convert it to an EBC Concept. Please review the cost information and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P360_Request_EBCMultipleConversion</fullName>
        <active>true</active>
        <description>Restrict the users from converting the same Request multiple times to EBC</description>
        <errorConditionFormula>AND (
isConvertedtoEBC__c, 
NOT(ISBLANK( EBC_Title__c)),
NOT(ISBLANK( ExecutiveBusinessCase__c )) 
)</errorConditionFormula>
        <errorMessage>An EBC has already been created for this Request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P360_Request_ExistingProjectCreateNew</fullName>
        <active>true</active>
        <description>P360 - Throw an error when user chooses &apos;Create New Project&apos; for Existing Project? selection and completes the Project lookup field</description>
        <errorConditionFormula>AND	( 	ISPICKVAL ( NewOrExistingProject__c, &apos;CreateNewProject&apos; ) , 
		NOT ( IsConverted__c ) , 
		NOT (  isConvertedtoEBC__c  ) ,
		NOT ( ISBLANK ( Project__c ) )
	)</errorConditionFormula>
        <errorMessage>A new project will be created automatically for this request. Please do not complete the Project field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P360_Request_OnlyOwnerCanConvert</fullName>
        <active>true</active>
        <description>P360 - Only the Request Owner can convert to a Project</description>
        <errorConditionFormula>AND ( 
     NOT ( IsConverted__c ),  
	 ISPICKVAL ( Status__c , &apos;Approved&apos;), 
	 $User.Id  &lt;&gt; OwnerId,
	 AND ( $Profile.Name &lt;&gt; &apos;GSA System Administrator&apos;, $Profile.Name &lt;&gt; &apos;GSA System User&apos;, $Profile.Name &lt;&gt; &apos;System Administrator&apos; )
	)</errorConditionFormula>
        <errorMessage>Please take ownership of this Request in order to convert it into a project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P360_Request_ProjectMissingExisting</fullName>
        <active>true</active>
        <description>P360 - Throw an error when user chooses &apos;Add to Existing Project&apos; but does not actually complete the Project lookup field</description>
        <errorConditionFormula>AND	( 	ISPICKVAL ( NewOrExistingProject__c, &apos;AddToExistingProject&apos; ) , 
		NOT ( IsConverted__c ) , 
		NOT (  isConvertedtoEBC__c  ) , 
		ISBLANK ( Project__c )
	)</errorConditionFormula>
        <errorMessage>Please choose an existing project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P360_RestrictBRGApprovalUpdate</fullName>
        <active>true</active>
        <description>Restrict the users to update the status of the BRGApproved field to &apos;Yes&apos; when the costs is greater than 500k</description>
        <errorConditionFormula>AND(ISPICKVAL(BRGApproved__c,&apos;Yes&apos;),Costs__c&gt;=500000)</errorConditionFormula>
        <errorDisplayField>BRGApproved__c</errorDisplayField>
        <errorMessage>The Request cannot be BRG approved as the Costs is greater than $500,000.</errorMessage>
    </validationRules>
</CustomObject>